# md_2024

./: .gitignore  CMakeLists.txt  README.md
atlas/: CMakeLists.txt
atlas/include/atlas/: Window.h  WindowFlag.h  polygon.h
atlas/include/atlas/render/: DC.h  RC.h  Shader.h  Texture.h
atlas/include/atlas/render/buffer/: BufferElement.h  BufferLayout.h  ElementBuffer.h  VertexArray.h  VertexBuffer.h
atlas/include/atlas/render/command/: BezierRC.h  CircleRC.h  LineRC.h  PolyLineRC.h  PolygonRC.h  RectRC.h  TextRC.h  TextureRC.h
atlas/include/atlas/render/font/: Font.h  FontFamily.h
atlas/include/atlas/units/: Color.h  FontStyle.h  Key.h  Point.h  Rect.h  Size.h  Thickness.h
atlas/rsc/shader/: innerglow.frag  line.geom
atlas/rsc/shader/common/: noise.frag
atlas/src/: Window.cpp  polygon.cpp
atlas/src/render/: DC.cpp  RC.cpp  Shader.cpp  Texture.cpp
atlas/src/render/buffer/: BufferElement.cpp  BufferLayout.cpp  DynamicVertexBuffer.cpp  ElementBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
atlas/src/render/command/: BezierRC.cpp  CircleRC.cpp  LineRC.cpp  PolyLineRC.cpp  PolygonRC.cpp  RectRC.cpp  TextRC.cpp  TextureRC.cpp
atlas/src/render/font/: Font.cpp  FontFamily.cpp
pointCalc/: CMakeLists.txt
pointCalc/src/: InputReader.cpp  InputReader.h  OutputReader.cpp  OutputReader.h  main.cpp  model.h  utils.cpp  utils.h
pointCalc2/: CMakeLists.txt
pointCalc2/src/: main.cpp
solver001/: CMakeLists.txt
solver001/src/: Solver.cpp  Solver.h  main.cpp
solver001/src/output/: OutputPrinter.cpp  OutputPrinter.h
solver002/: CMakeLists.txt
solver002/src/: Solver.cpp  Solver.h  main.cpp  model2.h
solver002/src/output/: OutputPrinter.cpp  OutputPrinter.h
t001/: CMakeLists.txt
t001/rsc/shader/: alphamask.frag  circle.frag  nebula.frag  polyline.geom  polyline.vert  texture.frag
t001/rsc/shader/common/: brush.frag  poly2uv.vert
t001/src/: Logger.cpp  Logger.h  main.cpp  model.h  vec.h
t001/src/atlas/: Visualizer.cpp  Visualizer.h  Window.cpp  Window.h  WindowFlag.h
t001/src/atlas/render/: DC.cpp  DC.h  RC.h  Texture.cpp
t001/src/atlas/render/buffer/: BufferLayout.h  DynamicVertexBuffer.h  ElementBuffer.h  VertexArray.h  VertexBuffer.h
t001/src/atlas/render/command/: BezierRC.cpp  BezierRC.h  CircleRC.cpp  CircleRC.h  LineRC.cpp  LineRC.h  PolyLineRC.cpp  PolygonRC.h  RectRC.h  TextRC.cpp  TextRC.h  TextureRC.cpp
t001/src/atlas/render/font/: Font.cpp  FontFamily.cpp
t001/src/input/: InputReader.cpp  InputReader.h
t001/src/output/: OutputPrinter.cpp  OutputPrinter.h
t001/src/units/: Brush.h  Color.h  FontStyle.h  Key.h  Point.h  Rect.h  Size.h  Thickness.h
t001/src/utils/: polygon.cpp  polygon.h
t001/src/visualize/: Visualizer.cpp  Visualizer.h  Window.cpp  Window.h
t001/src/visualize/render/: DC.cpp  DC.h  RC.h  Shader.h  Texture.h
t001/src/visualize/render/buffer/: BufferElement.h  BufferLayout.cpp  BufferLayout.h  ElementBuffer.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
t001/src/visualize/render/command/: BezierRC.cpp  BezierRC.h  LineRC.cpp  LineRC.h  PolyLineRC.cpp  PolyLineRC.h  PolygonRC.cpp  PolygonRC.h  RectRC.cpp  RectRC.h  TextRC.cpp  TextRC.h  TextureRC.cpp  TextureRC.h
t001/src/visualize/render/font/: Font.h  FontFamily.h
utils/: CMakeLists.txt
utils/include/utils/: Arguments.h  model.h  uid.h  utils.h
utils/include/utils/log/: Logger.h
utils/include/utils/math/: vec.h
utils/include/utils/printer/: OutputPrinter.h
utils/include/utils/reader/: InputReader.h  OutputReader.h
utils/src/: Arguments.cpp  model.cpp  utils.cpp
utils/src/log/: Logger.cpp
utils/src/printer/: OutputPrinter.cpp
utils/src/reader/: InputReader.cpp  OutputReader.cpp
visualizer/: CMakeLists.txt
visualizer/rsc/shader/: bezier.geom  fill.frag
visualizer/rsc/shader/common/: poly2.vert
visualizer/src/: Visualizer.cpp  Visualizer.h  main.cpp
visualizer/src/atlas/: Hint.h  Visualizer.h  Window.cpp  Window.h  WindowFlag.h
visualizer/src/atlas/render/: DC.cpp  DC.h  RC.cpp  RC.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
visualizer/src/atlas/render/buffer/: BufferElement.cpp  BufferElement.h  BufferLayout.h  DynamicVertexBuffer.cpp  ElementBuffer.h  VertexArray.h  VertexBuffer.h
visualizer/src/atlas/render/command/: PolyLineRC.h  PolygonRC.cpp  RectRC.cpp  RectRC.h  TextRC.cpp  TextureRC.h
visualizer/src/atlas/render/font/: Font.cpp  Font.h  FontFamily.cpp
visualizer/src/units/: Color.h  FontStyle.h  Key.h  Mouse.h  Point.h  Rect.h  Size.h  Thickness.h
visualizer/src/utils/: polygon.h
visualizer001/: CMakeLists.txt
visualizer001/src/: Solver.cpp  Solver.h  Visualizer.cpp
visualizer003/src/: Solver.cpp  Solver.h  Visualizer.cpp  Visualizer.h
visualizer004/: CMakeLists.txt
visualizer004/src/: Solver.cpp  Solver.h  Visualizer.cpp  Visualizer.h
visualizer005/: CMakeLists.txt
visualizer005/src/: Solver.cpp  Solver.h  Visualizer.cpp  Visualizer.h
visualizer006/: CMakeLists.txt
visualizer006/src/: Solver.cpp  Solver.h  Visualizer.h
visualizer007/: CMakeLists.txt
visualizer007/src/: Solver.cpp  Solver.h  Visualizer.cpp  Visualizer.h
visualizer008/: CMakeLists.txt
visualizer008/src/: Solver.cpp  Solver.h  Visualizer.cpp  Visualizer.h  main.cpp
